@@ -39,6 +39,7 @@
 
 #include <nuttx/config.h>
 
+#include <stddef.h>
 #include <errno.h>
 #include <debug.h>
 
